--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
     -->
     <title>React App</title>
   </head>
+    <style>html,body {margin:0; padding:0; border: border-box;}</style>
+    <style>@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');</style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
