--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <title>E-Shop Webiste</title>
   </head>
     <style>html,body {margin:0; padding:0; border: border-box;}</style>
-    <style>@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');</style>
+    <style>@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700;800&display=swap');</style>
     <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap');</style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
